Material Preview and Render Preview Wireframe culling not working when "In Front" is toggled #73442

Closed
opened 2020-01-28 00:30:49 +01:00 by Ilari Männistö · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-24 17:48, hash: fc1f5bded4
Worked: (optional)

Short description of error
In workbench, if you put the wireframe overlay on, and toggle an object's viewport visibility feature called "In front" on, everything works as expected.
image.png
image.png
But in Material Preview mode and Render Preview mode, "In front" causes all of the wires of the mesh to show (backface wireframes aren't culled).
image.png
image.png
image.png

Exact steps for others to reproduce the error
Explained above.

Attached is the file I used for the screenshots.
PS: Isn't the wireframe overlay still a bit jaggy? It has lots of broken edges even after the recent fix, no?
wireframe-culling.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-24 17:48, hash: `fc1f5bded4` Worked: (optional) **Short description of error** In workbench, if you put the wireframe overlay on, and toggle an object's viewport visibility feature called "In front" on, everything works as expected. ![image.png](https://archive.blender.org/developer/F8306376/image.png) ![image.png](https://archive.blender.org/developer/F8306378/image.png) But in Material Preview mode and Render Preview mode, "In front" causes all of the wires of the mesh to show (backface wireframes aren't culled). ![image.png](https://archive.blender.org/developer/F8306381/image.png) ![image.png](https://archive.blender.org/developer/F8306383/image.png) ![image.png](https://archive.blender.org/developer/F8306387/image.png) **Exact steps for others to reproduce the error** Explained above. Attached is the file I used for the screenshots. PS: Isn't the wireframe overlay still a bit jaggy? It has lots of broken edges even after the recent fix, no? [wireframe-culling.blend](https://archive.blender.org/developer/F8306393/wireframe-culling.blend)

Added subscriber: @Lattapotta

Added subscriber: @Lattapotta
Member

Added subscribers: @Jeroen-Bakker, @JacquesLucke

Added subscribers: @Jeroen-Bakker, @JacquesLucke
Member

Not sure if this is supposed to look work like it. It does look wrong to me.

The issue seems to be caused by this combination:

  • Material Preview mode
  • Wireframe overlay enabled
  • In Front enabled on an object

@Jeroen-Bakker is there a known issue for this combination?

Not sure if this is supposed to look work like it. It does look wrong to me. The issue seems to be caused by this combination: * Material Preview mode * Wireframe overlay enabled * In Front enabled on an object @Jeroen-Bakker is there a known issue for this combination?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 77d23b0bd7

This issue was referenced by 77d23b0bd76f65b89f6ee73738e5993b274ba27a

This issue was referenced by f1f2d9fe74

This issue was referenced by f1f2d9fe745e37d7e7c286002ec3fa6243b499e3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-02-11 18:38:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73442
No description provided.